[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/attacks/projectiles/base_projectile/base_projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/abilities/ENTITY/base_distance_ability/spawner.gd" type="Script" id=2]

[node name="spawner" instance=ExtResource( 1 )]
script = ExtResource( 2 )
duration = 0.2

[node name="One_step_timer" type="Timer" parent="." index="2"]
wait_time = 0.05

[node name="Duration" type="Timer" parent="." index="3"]
autostart = true

[connection signal="timeout" from="One_step_timer" to="." method="_on_One_step_timer_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
